<resources>
    <string name="app_name">capstone</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">hi</string>

    <string name="speed">0.0</string>
    <string name="full_video">전체 영상</string>
    <string name="event_video">사고 영상</string>
    <string name="date">2000/01/01</string>
    <string name="time">00시 00분</string>
    <string name="location">광주광역시 북구</string>
    <string name="video_time">0시간 00분</string>
    <string name="video_size">0MB</string>
    <string name="video_none">저장된 영상이 없습니다.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="pw_search">비밀번호 찾기</string>
    <string name="pw_search_inf">가입한 이메일 주소를 입력해 주세요. \n비밀번호 재설정 메일이 발송됩니다.</string>
    <string name="send">전송</string>

</resources>