<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="15dp">

    <ImageView
        android:id="@+id/thumbnailImageView"
        android:layout_width="100dp"
        android:layout_height="110dp"
        android:src="@drawable/loading"
        android:background="@android:color/transparent"/>

    <LinearLayout
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/date" />

            <TextView
                android:id="@+id/timeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time" />
        </LinearLayout>

        <TextView
            android:id="@+id/locationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/videoTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/video_time" />

            <TextView
                android:id="@+id/videoSizeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video_size" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageButton
            android:id="@+id/downloadButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/download__1_"
            android:background="@null"
            android:layout_marginTop="10dp"
            />
        <ImageButton
            android:id="@+id/deleteButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/trash"
            android:background="@null"
            android:layout_marginTop="30dp"
            />

    </LinearLayout>




</LinearLayout>